Bug 1640973 - [Linux] Enable hidden system titlebar for dialogs r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D78818